# PurrBot

./: .dockerignore  .gitignore  CLEAN_CODE_REFACTORING_SUMMARY.md  Cargo.toml  Dockerfile  Dockerfile.enclave  Dockerfile.meow  Dockerfile.test  NITRO_ENCLAVE_DEPLOYMENT.md  QUICKSTART.md  README.md  create_session.py  deploy-nitro-enclave.sh  docker-compose.yml  mutation_testing_summary.md  nitro-enclave-config.json  purrbot.sqlite  test_session.session  test_session.session-journal
9sdk/: Cargo.toml
9sdk-enclave/: Cargo.toml
9sdk-enclave/migrations/: 001_init.sql
9sdk-enclave/src/: main.rs
9sdk/src/: enclave.rs  lib.rs  transport.rs
meow/: Cargo.toml  purrbot.sqlite
meow/assets/: purr.1
meow/src/: commands.rs  constants.rs  keyboard.rs  main.rs  mod.rs
meow/src/handlers/: callback.rs  message.rs
meow/src/models/: buttons.rs  buttons_test.rs  create_account.rs  log_in_state.rs  password_handler.rs
meow/src/processors/: callback_processor.rs  message_processor.rs  message_processor_test.rs  mod.rs
meow/src/services/: user_config_store.rs
meow/src/utils/: mod.rs
meow/src/v1/: commands.rs  constants.rs  mod.rs
meow/src/v1/handlers/: callback.rs  inline.rs  message.rs  mod.rs
meow/src/v1/models/: buttons.rs  buttons_test.rs  log_in_state.rs  logged_in_buttons.rs  logged_out_buttons.rs  mod.rs  password_handler.rs
meow/src/v1/processors/: callback_processor.rs  inline_processor.rs  message_processor.rs  message_processor_test.rs  mod.rs
meow/src/v1/services/: mod.rs  user_config_store.rs
meow/teloxide/erasable/: .cargo-checksum.json
meow/teloxide/rc-box/: .cargo-checksum.json
meow/teloxide/reqwest/: .cargo-checksum.json  Cargo.toml
meow/teloxide/teloxide/: .cargo-checksum.json  Cargo.toml
meow/teloxide/teloxide-core/: .cargo-checksum.json  Cargo.toml
meow/teloxide/teloxide-macros/: .cargo-checksum.json  Cargo.toml
meow/teloxide/vsock/: .cargo-checksum.json
meow/tests/: roundtrip.rs
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  outcomes.json
mutants.out.old/diff/: 9sdk__src__lib.rs_line_120_col_9.diff  9sdk__src__lib.rs_line_127_col_5_001.diff  9sdk__src__lib.rs_line_139_col_5.diff  9sdk__src__lib.rs_line_151_col_5.diff  9sdk__src__lib.rs_line_165_col_5_001.diff  9sdk__src__lib.rs_line_180_col_5.diff  9sdk__src__lib.rs_line_180_col_5_001.diff  9sdk__src__lib.rs_line_180_col_5_002.diff  9sdk__src__lib.rs_line_70_col_9_001.diff  9sdk__src__lib.rs_line_93_col_9.diff  9sdk__src__lib.rs_line_93_col_9_001.diff  9sdk__src__lib.rs_line_93_col_9_002.diff  9sdk__src__lib.rs_line_93_col_9_003.diff  9sdk__src__transport.rs_line_25_col_5_001.diff  9sdk__src__transport.rs_line_25_col_5_002.diff  9sdk__src__transport.rs_line_39_col_5.diff  9sdk__src__transport.rs_line_39_col_5_002.diff  meow__src__keyboard.rs_line_4_col_5.diff  meow__src__main.rs_line_20_col_5_001.diff  meow__src__main.rs_line_36_col_5.diff  meow__src__main.rs_line_49_col_5.diff  meow__src__v1__handlers__callback.rs_line_13_col_5.diff  meow__src__v1__models__buttons.rs_line_32_col_9.diff  meow__src__v1__models__buttons.rs_line_34_col_17.diff  meow__src__v1__models__buttons.rs_line_35_col_17.diff  meow__src__v1__models__buttons.rs_line_38_col_17.diff  meow__src__v1__models__buttons.rs_line_43_col_17.diff  meow__src__v1__models__buttons.rs_line_44_col_17.diff  meow__src__v1__models__buttons.rs_line_45_col_17.diff  meow__src__v1__models__buttons.rs_line_58_col_9.diff  meow__src__v1__models__buttons.rs_line_58_col_9_001.diff  meow__src__v1__models__buttons.rs_line_58_col_9_003.diff  meow__src__v1__models__password_handler.rs_line_42_col_9.diff  meow__src__v1__models__password_handler.rs_line_80_col_9.diff  meow__src__v1__models__password_handler.rs_line_80_col_9_001.diff  meow__src__v1__models__password_handler.rs_line_89_col_9.diff  meow__src__v1__models__password_handler.rs_line_89_col_9_002.diff  meow__src__v1__processors__message_processor.rs_line_107_col_5.diff  meow__src__v1__processors__message_processor.rs_line_220_col_5.diff  meow__src__v1__processors__message_processor.rs_line_335_col_21.diff  (+9 more)
mutants.out/diff/: 9sdk__src__lib.rs_line_102_col_12.diff  9sdk__src__lib.rs_line_127_col_5.diff  9sdk__src__lib.rs_line_139_col_5_001.diff  9sdk__src__lib.rs_line_151_col_5_001.diff  9sdk__src__lib.rs_line_165_col_5.diff  9sdk__src__lib.rs_line_165_col_5_002.diff  9sdk__src__lib.rs_line_70_col_9.diff  9sdk__src__transport.rs_line_25_col_5.diff  9sdk__src__transport.rs_line_25_col_5_003.diff  9sdk__src__transport.rs_line_39_col_5_001.diff  9sdk__src__transport.rs_line_39_col_5_003.diff  meow__src__keyboard.rs_line_21_col_5.diff  meow__src__main.rs_line_20_col_5.diff  meow__src__main.rs_line_20_col_52.diff  meow__src__main.rs_line_24_col_5.diff  meow__src__main.rs_line_31_col_5.diff  meow__src__main.rs_line_40_col_5.diff  meow__src__v1__handlers__callback.rs_line_40_col_5.diff  meow__src__v1__handlers__message.rs_line_13_col_5.diff  meow__src__v1__models__buttons.rs_line_36_col_17.diff  meow__src__v1__models__buttons.rs_line_37_col_17.diff  meow__src__v1__models__buttons.rs_line_58_col_9_002.diff  meow__src__v1__models__password_handler.rs_line_42_col_9_001.diff  meow__src__v1__models__password_handler.rs_line_59_col_9.diff  meow__src__v1__models__password_handler.rs_line_59_col_9_001.diff  meow__src__v1__models__password_handler.rs_line_80_col_9_002.diff  (+14 more)
tests/: requirements.txt  test-vsock-enclave.py  test_bot_flow.py
