[package]
name = "nine_sdk_enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_core = "0.6"
argon2 = "0.5"
password-hash = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
nine_sdk = { path = "../9sdk" }
