[package]
name = "nine_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
argon2 = "0.5"
password-hash = "0.5"
chacha20poly1305 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
