[package]
name = "nine_sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
password-hash = "0.5.0"
rand = { version = "0.8.5", features = ["std"] }
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
vsock = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }
log = "0.4.27"
pretty_env_logger = "0.5.0"

[features]
default = []
vsock = ["dep:vsock"]

[target.'cfg(target_os = "linux")'.dependencies]
vsock = { version = "0.3" }
libc = "0.2"

[target.'cfg(target_os = "linux")'.features]
vsock = []
