[package]
name = "meow"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "meow"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
log = "0.4.27"
nine_sdk = { path = "../9sdk" }
once_cell = "1.21.3"
pretty_env_logger = "0.5.0"
serde = "1.0.219"
teloxide = { version = "0.15", features = ["macros"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uuid = "1.17.0"
vsock = { version = "0.4", optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"

[features]
default = []
vsock = ["dep:vsock"]
