[package]
name = "meow"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "meow"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
log = "0.4.27"
nine_sdk = { path = "../9sdk" }
once_cell = "1.21.3"
pretty_env_logger = "0.5.0"
serde = "1.0.219"
teloxide = { version = "0.15", features = ["macros"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uuid = "1.17.0"
vsock = { version = "0.3", optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0.140"
alloy-signer-local = "0.1.0"
alloy-primitives = "0.7.0"
rand = "0.8"
chacha20poly1305 = "0.10.1"
nine_sdk_enclave = { path = "../9sdk-enclave" }

[features]
default = []
vsock = ["dep:vsock"]

[target.'cfg(target_os = "linux")'.dependencies]
vsock = { version = "0.3" }
libc = "0.2"

[target.'cfg(target_os = "linux")'.features]
vsock = []

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
